feat: add window positions witihn track (#64)